update/docker: tech stack
Druid was _a bit_ to heavy, so we've changed our tech stack to kafka +
cockroachDB instead of kafka + druid

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,101 +1,19 @@
-volumes:
-  metadata_data: {}
-  middle_var: {}
-  broker_var: {}
-  coordinator_var: {}
-  router_var: {}
-  druid_shared: {}
+networks:
+  mda: {}
 services:
   zookeeper:
-    image: zookeeper:3.5.6
-    hostname: zookeeper
-    container_name: manual-zookeeper
+    image: bitnami/zookeeper:3.7
+    container_name: zookeeper
     ports:
-      - "2181:2181"
+      - 2181:2181
+    volumes:
+      - ./data/zookeeper:/bitnami
     environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
-      ZOO_MY_ID: 1
-
-  postgres:
-    container_name: postgres
-    image: postgres:latest
-    volumes:
-      - metadata_data:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_PASSWORD=FoolishPassword
-      - POSTGRES_USER=druid
-      - POSTGRES_DB=druid
-
-  coordinator:
-    image: apache/druid:0.22.1
-    container_name: coordinator
-    volumes:
-      - druid_shared:/opt/shared
-      - coordinator_var:/opt/druid/var
-    depends_on:
-      - zookeeper
-      - postgres
-    ports:
-      - "8081:8081"
-    command:
-      - coordinator
-    env_file:
-      - environment
-
-  broker:
-    image: apache/druid:0.22.1
-    container_name: broker
-    volumes:
-      - broker_var:/opt/druid/var
-    depends_on:
-      - zookeeper
-      - postgres
-      - coordinator
-    ports:
-      - "8082:8082"
-    command:
-      - broker
-    env_file:
-      - environment
-
-  middlemanager:
-    image: apache/druid:0.22.1
-    container_name: middlemanager
-    volumes:
-      - druid_shared:/opt/shared
-      - middle_var:/opt/druid/var
-    depends_on:
-      - zookeeper
-      - postgres
-      - coordinator
-    ports:
-      - "8091:8091"
-      - "8100-8105:8100-8105"
-    command:
-      - middleManager
-    env_file:
-      - environment
-
-  router:
-    image: apache/druid:0.22.1
-    container_name: router
-    volumes:
-      - router_var:/opt/druid/var
-    depends_on:
-      - zookeeper
-      - postgres
-      - coordinator
-    ports:
-      - "8888:8888"
-    command:
-      - router
-    env_file:
-      - environment
-
+      ALLOW_ANONYMOUS_LOGIN: "yes"
+    networks:
+      - mda
   kafka:
     image: bitnami/kafka
-    container_name: kafka
     ports:
       - 9092:9092
     volumes:
@@ -106,17 +24,33 @@ services:
       KAFKA_CFG_AUTO_CREATE_TOPICS: ENABLE
     depends_on:
       - zookeeper
+    networks:
+      - mda
 
   kafka-adapter:
     image: telefonica/prometheus-kafka-adapter:1.8.0
-    container_name: kafka_adapter
     ports:
-      - 10000:8080
+      - 9093:8080
     environment:
       SERIALIZATION_FORMAT: json
     depends_on: [kafka]
+    networks:
+      - mda
 
   grafana:
     image: grafana/grafana-oss
     volumes:
       - ./data/grafana:/var/lib/grafana
+    networks:
+      - mda
+
+  roach:
+    image: cockroachdb/cockroach:v21.2.6
+    command: start --insecure --join=multidimensional-analysis-roach-1 --listen-addr=localhost
+    volumes:
+      - ./data/cockroach:/cockroach/cockroach-data
+    ports:
+      - 9094:8080
+      - 26257:26257
+    networks:
+      - mda
